--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-UNSPLASH_ACCESS_KEY=your unsplash access key
-UNSPLASH_SECRET_KEY=your unsplash secret key
+UNSPLASH_ACCESS_KEY=your_unsplash_access_key_here
+UNSPLASH_SECRET_KEY=your_unsplash_secret_key_here
 CACHE_DURATION_SECONDS=600
